--- a/index.html
+++ b/index.html
@@ -1,58 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Khula:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Create Your Burger</title>
 </head>
+
 <body>
-    <div><h1>Create your Burger</h1></div>
+    <div class="container">
+        <header>
+            <h1>Create Your Burger</h1>
+        </header>
+        <main>
+            <div class="name-burger">
+                <input type="text" id="name" name="name" placeholder="Name Your Burger">
+            </div>
 
-    <div id="nameBurger">
-        <input type="name" id="nameBurger" name="nameBurger" placeholder="Name your Burger">
+            <h2 class="main-title">Ingredients</h2>
+            <div class="ingredients">
+                <div class="ingredient">
+                    <img class="ingredient-image" src="img/cheese.svg" alt="Cheese">
+                    <label for="cheese">Cheese</label>
+                    <div class="checkbox">
+                        <input id="cheese-add" type="checkbox" class="ingredient-checkbox" name="ingredients[]" id="cheese" value="5">
+                        <label for="cheese-add">Add</label>
+                    </div>
+                </div>
+                <div class="ingredient">
+                    <img class="ingredient-image" src="img/tomato.svg" alt="Tomato">
+                    <label for="cheese">Tomato</label>
+                    <div class="checkbox">
+                        <input id="tomato-add" type="checkbox" class="ingredient-checkbox" name="ingredients[]" id="tomato" value="2">
+                        <label for="tomato-add">Add</label>
+                    </div>
+                </div>
+                <div class="ingredient">
+                    <img class="ingredient-image" src="img/fried-egg.svg" alt="Egg">
+                    <label for="egg">Egg</label>
+                    <div class="checkbox">
+                        <input id="egg-add" type="checkbox" class="ingredient-checkbox" name="ingredients[]" id="egg" value="3">
+                        <label for="egg-add">Add</label>
+                    </div>
+                </div>
+                <div class="ingredient">
+                    <img class="ingredient-image" src="img/lettuce.svg" alt="Lettuce">
+                    <label for="lettuce">Lettuce</label>
+                    <div class="checkbox">
+                        <input id="lettuce-add" type="checkbox" class="ingredient-checkbox" name="ingredients[]" id="lettuce" value="4">
+                        <label for="lettuce-add">Add</label>
+                    </div>
+                </div>
+                <div class="ingredient">
+                    <img class="ingredient-image" src="img/mustard.svg" alt="Mustard">
+                    <label for="mustard">Mustard</label>
+                    <div class="checkbox">
+                        <input id="mustard-add" type="checkbox" class="ingredient-checkbox" name="ingredients[]" id="mustard" value="6">
+                        <label for="mustard-add">Add</label>
+                    </div>
+                </div>
+                <div class="ingredient">
+                    <img class="ingredient-image" src="img/ketchup.svg" alt="Ketchup">
+                    <label for="ketchup">Ketchup</label>
+                    <div class="checkbox">
+                        <input id="ketchup-add" type="checkbox" class="ingredient-checkbox" name="ingredients[]" id="ketchup" value="1">
+                        <label for="ketchup-add">Add</label>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="discount">
+                <label for="coupon">Discount Coupon</label>
+                <input type="text" name="coupon" id="coupon" placeholder="12354ABCDEF">
+            </div>
+
+            <div class="submit">
+                <button id="button" class="btn">calculate</button>
+            </div>
+        </main>
+        <footer>
+            <h2>Your Price</h2>
+            <div class="price-container">$ <span id="price"><strong>50</strong></span></div>
+        </footer>
     </div>
 
-    <div>
-      <h4>Ingredients</h4>
+    <script src="../js-burger/js/scriptBurger.js"></script>
 
-        <p>Cheese</p>
-        <input type="checkbox" id="cheese" class="ingredient" name="cheese" value="5">
-        <label for="cheese">Add</label>
-
-        <p>Tomato</p>
-        <input type="checkbox" id="tomato" class="ingredients" name="tomato" value="2">
-        <label for="tomato">Add</label>
-
-        <p>Egg</p>
-        <input type="checkbox" id="egg" class="ingredient" name="egg" value="3">
-        <label for="egg">Add</label>
-
-        <p>Lettuce</p>
-        <input type="checkbox" id="lettuce" class="ingredient" name="lettuce" value="4">
-        <label for="lettuce">Add</label>
-
-        <p>Mustard</p>
-        <input type="checkbox" id="mustard" class="ingredient" name="mustard" value="6">
-        <label for="mustard">Add</label>
-
-        <p>Ketchup</p>
-        <input type="checkbox" id="ketchup" class="ingredient" name="ketchup" value="1">
-        <label for="ketchup">Add</label>
-
-    </div>
-    <div>
-        <div class="coupon">
-            <label for="coupon">Discount Coupon</label><br>
-            <input type="text" id="coupon" name="discount">
-        </div>
-    </div>
-
-    <button id="button" class="btn">calculate</button>
-
-    <div>
-        <h1>Your price</h1>   <h1 id="finalPrice">50</h1>
-    </div>
-    <script src="scriptBurger.js"></script>
 </body>
+
 </html>
