--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </footer>
     </div>
 
-    <script src="../js-burger/js/scriptBurger.js"></script>
+    <script src="js/scriptBurger.js"></script>
 
 </body>
 
